@@ -16,6 +16,7 @@
 1.3 @
   Support for an irker.conf file to set irkerhook variables under Subversion.
   irkerhook.py now has its own manual page.
+  Added channelmax variable for rate-limiting
 
 
 
